--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "An MCP server that helps you find and analyze NPM packages using npms.io",
   "private": true,
   "type": "module",
+  "bin": {
+    "npm-detective": "./dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
